--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,103 +1,475 @@
 body {
     margin-left: auto;
     margin-right: auto;
-    width: 100%px;
-    font-family: Georgia, "Times New Roman", Times, serif;
+    width: 1170px;
 }
 
-.header {
-    width: 100%;
-    height: 240px;
+.container {
+    width: 1170px;
+    height: 140px;
     margin: 0 auto;
-    background-color: #134074;
-    color: white;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 10px;
+    background-color: white;
+    color: black;
+    display: block;
+    padding: 0 15px;
 }
 
-.header h1 {
+.container h1 {
     font-size: 75px;
     letter-spacing: 5px;
-    text-align: left;
+    font-family: 'Laila', serif;
+    align-content: space-between;
+    text-align: center;
+}
+
+.btn-wrapper {
+    width: 1170px;
+    padding: 10 15px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: white;
+    font-size: 20px;
+    padding-top: 10px;
+    letter-spacing: 1px;
+    font-family: 'Laila', serif;
+}
+
+.btn {
+    display: inline-block;
+    opacity: 1;
+    padding: 12px 24px;
+    color: black;
+    background-color: white;
+    font-family: 'Laila', serif;
+    text-decoration: none;
+}
+
+.btn:hover {
+    opacity: 0.7;
+}
+
+.arrivals {
+    padding: 5px;
+}
+
+.tops {
+    padding: 5px;
+}
+
+.bottoms {
+    padding: 5px;
+}
+
+.dresses {
+    padding: 5px;
+}
+
+.outerwear {
+    padding: 5px;
+}
+
+.accessories {
+    padding: 5px;
+}
+
+.sale {
+    padding: 5px;
+}
+
+header {
+    height: 65px;
+    width: 1170px;
+    background-color: black;
+    margin: 0 auto;
+    color: white;
+    border-bottom: 2px solid black;
+    padding: 0 10px;
+}
+
+.header-left {
+    float: left;
+}
+
+.login {
+    display: inline-block;
+    width: 124px;
+    color: white;
+    padding-top: 20px;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    font-family: 'Laila', serif;
+}
+
+.login:hover {
+    color: #C6D2ED;
+}
+
+.header-right {
+    float: right;
+    width: 124px;
+    padding-top: 20px;
+    letter-spacing: 10px;
+}
+
+.header-right a {
+    color: white;
+}
+
+.pic-title {
+    width: 1170px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 40px;
+    font-family: Comfortaa;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    color: #000000;
+}
+
+.img-container {
+    width: 1170px;
+    margin: 0 auto;
+    text-align: center;
+    font-family: Comfortaa;
+    margin-bottom: 60px;
+}
+
+.img-box {
+    border: 2px solid black;
+    padding: 15px;
+    margin: 15px;
+}
+
+.img-box a {
+    text-decoration: none;
+    color: black;
+}
+
+.coming-soon {
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    height: 300px;
+    color: black;
+    background-color: white;
+    font-family: 'Laila', serif;
+    font-size: 50px;
+    align-content: center;
+}
+
+
+/*Marcie-homepage*/
+
+.blog {
+    position: relative;
+    text-align: center;
+}
+
+.blog img {
+    width: 1170px;
+    height: 400px;
+}
+
+.blog-text {
+    position: relative;
+    bottom: 360px;
+    left: 400px;
+    font-family: 'Comfortaa', cursive;
+    font-size: 24px;
     font-weight: bold;
 }
 
-.header p {
-    text-align: left;
-    font-size: 15px;
+.latest {
+    position: relative;
+    text-align: center;
 }
 
-.header-table {
-    border: 0;
-    padding: 0;
-    letter-spacing: 0;
+.latest h1 {
+    padding: 20px;
+    font-family: 'Comfortaa', cursive;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.latest img {
+    height: 320px;
+    width: 320px;
+    padding: 20px 40px 20px 40px;
+}
+
+.look-images {
+    display: inline-block;
+    text-align: center;
+    font-size: 13px;
+    font-family: 'Comfortaa', cursive;
+}
+
+.subscribe {
+    text-align: center;
+    font-family: 'Comfortaa', cursive;
+    border-top: 5px solid #703D57;
+    margin: 20px 80px;
+}
+
+.subscribe h1 {
+    font-size: 24px;
+}
+
+.subscribe h3 {
+    font-size: 16px;
+}
+
+.testimonial {
+    margin: 20px 80px;
+    border-top: 5px solid #703D57;
+    border-bottom: 5px solid #703D57;
+}
+
+.testimonial h1 {
+    margin-left: 100px;
+    margin-top: 40px;
+    margin-right: 10px;
+    font-family: 'Comfortaa', cursive;
+    font-size: 24px;
+    font-weight: bold;
+    float: left;
+}
+
+.testimonial p {
+    border: 2px solid #D9B8C4;
+    float: right;
+    padding: 10px;
+    margin-bottom: 40px;
+    font-style: italic;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+}
+
+.testimonial:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+/*bottom menu - every page -*/
+
+.menu {
+    /*is there a better way to center this section?*/
     width: 100%;
-    height: 240px;
-    background-color: #134074;
+    display: inline-block;
+    text-align: center;
+    padding-top: 20px;
 }
 
-.header-table h1 {
-    font-size: 65px;
-    letter-spacing: 2px;
-    text-align: left;
+.menu a {
+    color: black;
+}
+
+.column h1 {
+    font-family: 'Comfortaa', cursive;
+    font-size: 18px;
     font-weight: bold;
 }
 
-.header-table p {
-    text-align: left;
-    font-size: 15px;
+.column p {
+    font-family: 'Comfortaa', cursive;
+    font-size: 14px;
 }
 
-.sidenav {
-    width: 170px;
+.column a {
+    color: black;
+}
+
+.column {
+    float: left;
+    width: 33.3%;
+}
+
+
+/*footer on every page*/
+
+footer {
+    background-color: black;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    width: 1170px;
+    padding: 10px 40px;
+    display: inline-block;
+    width: 100%;
+}
+
+.copyright {
+    float: right;
+    padding-right: 40px;
+}
+
+.phone {
+    text-indent: 60px;
+    float: left;
+}
+
+.address {
+    float: left;
+}
+
+
+/*dresses & rompers page*/
+
+.home {
+    font-family: 'Comfortaa', cursive;
+    font-size: 12px;
+    color: #703D57;
+    margin-left: 60px;
+}
+
+.home a {
+    color: #703D57;
+}
+
+
+/*First modal for Floral Maxi Dress Quick View*/
+
+ :root {
+    --modal-duration: 1s;
+    --modal-color: #ffffff;
+}
+
+.button {
+    background: #9AA899;
+    padding: 1em 2em;
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background: #515650;
+}
+
+.modal {
+    display: none;
     position: fixed;
     z-index: 1;
-    top: 300px;
-    left: 10px;
-    background: #E0E1DD;
-    overflow-x: hidden;
-    padding: 8px 0;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.sidenav a {
-    padding: 6px 8px;
+.modal-content {
+    margin: 10% auto;
+    width: 80%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
+}
+
+.modal-header h2 {
+    margin: 0;
+}
+
+.modal-footer h3 {
+    font-size: 8px;
+    margin: 0;
+}
+
+.button {
     text-decoration: none;
-    font-size: 25px;
-    color: #134074;
-    display: block;
 }
 
-.sidenav a:hover {
-    color: #064579;
+.modal-header {
+    background: #515650;
+    padding: 15px;
+    color: #fff;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
-.main {
-    margin: 20px 200px;
-    padding: 20px;
-    border: 2px dotted #134074;
-    color: #0D1B2A;
+.modal-body {
+    padding: 10px 20px;
+    background: #fff;
 }
 
-.main h2 {
-    text-align: center;
-    border-bottom: #064579;
-    font-size: 25px;
+.modal-footer {
+    background: var(--modal-color);
+    padding: 10px;
+    color: #fff;
+    text-align: right;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
-.main p {
-    text-align: center;
-    border-bottom: #064579;
-    font-size: 17px;
+.close {
+    color: #ccc;
+    float: right;
+    font-size: 30px;
+    color: #fff;
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {
-        padding-top: 40px;
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@keyframes modalopen {
+    from {
+        opacity: 0;
     }
-    .sidenav a {
-        font-size: 18px;
+    to {
+        opacity: 1;
     }
+}
+
+.modal-body button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+.modal-body button:hover {
+    opacity: 0.7;
+}
+
+.modal-table {
+    float: left;
+}
+
+.size-markers {
+    display: flex;
+    flex-direction: row;
+}
+
+.sizes {
+    border: 1 solid black;
+    Background-color: white;
+    color: black;
+    font-size: 18px;
+    border-radius: 50%;
+    margin: 4px 6px;
+    display: inline-block;
+    text-align: left
+}
+
+.product-info {
+    text-align: left;
+}
+
+.quantity {
+    display: inline-block;
+    align-content: left;
+    padding: 10px;
 }
