--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,20 +6,24 @@
                                 
                                 .container {
                                     width: 1170px;
-                                    height: 140px;
                                     margin: 0 auto;
-                                    background-color: #426CB4;
-                                    color: white;
-                                    display: block;
-                                    padding: 15px 0px;
+                                    text-align: center;
+                                    font-family: 'roman';
+                                    margin-bottom: 60px;
                                 }
                                 
                                 .container h1 {
                                     font-size: 75px;
                                     letter-spacing: 5px;
                                     font-family: 'Cinzel';
-                                    align-content: space-between;
-                                    text-align: left;
+                                    text-align: center;
+                                }
+                                
+                                .container img {
+                                    text-align: center;
+                                    height: 320px;
+                                    width: 320px;
+                                    padding: 20px 40px 20px 40px;
                                 }
                                 
                                 .bio {
@@ -124,10 +128,6 @@
                                     color: white;
                                 }
                                 
-                                .login:hover {
-                                    color: #C6D2ED;
-                                }
-                                
                                 .header-right {
                                     float: right;
                                     width: 124px;
@@ -137,43 +137,6 @@
                                 
                                 .header-right a {
                                     color: white;
-                                }
-                                
-                                .coming-soon {
-                                    width: 400px;
-                                    margin: 0 auto;
-                                    text-align: center;
-                                    height: 300px;
-                                    color: black;
-                                    background-color: white;
-                                    font-family: 'roman';
-                                    font-size: 50px;
-                                    align-content: center;
-                                }
-                                
-                                .latest {
-                                    position: relative;
-                                    text-align: center;
-                                }
-                                
-                                .latest h1 {
-                                    padding: 20px;
-                                    font-family: 'roman';
-                                    font-size: 24px;
-                                    font-weight: bold;
-                                }
-                                
-                                .latest img {
-                                    height: 320px;
-                                    width: 320px;
-                                    padding: 20px 40px 20px 40px;
-                                }
-                                
-                                .look-images {
-                                    display: inline-block;
-                                    text-align: center;
-                                    font-size: 13px;
-                                    font-family: 'roman';
                                 }
                                 
                                 .InkPolicy {
