--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ body {
 .container h1 {
     font-size: 75px;
     letter-spacing: 5px;
-    font-family: 'Cinzel';
+    font-family: "Courier New", Courier, monospace;
     text-align: center;
 }
 
@@ -36,7 +36,7 @@ body {
     top: 36px;
     bottom: 36px;
     left: 40px;
-    font-family: 'Cinzel';
+    font-family: "Courier New", Courier, monospace;
     font-size: 20px;
     font-weight: normal;
 }
@@ -46,7 +46,7 @@ body {
     margin: 0 auto;
     text-align: center;
     padding-top: 40px;
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     font-style: normal;
     font-weight: bold;
     font-size: 25px;
@@ -57,7 +57,7 @@ body {
     width: 1170px;
     margin: 0 auto;
     text-align: center;
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     margin-bottom: 60px;
 }
 
@@ -81,8 +81,8 @@ body {
     font-size: 20px;
     padding-top: 10px;
     letter-spacing: 1px;
-    font-family: 'roman';
-    border: 2px solid black;
+    font-family: "Courier New", Courier, monospace;
+    border: 2px solid #4366af;
 }
 
 .btn {
@@ -91,7 +91,7 @@ body {
     padding: 12px 24px;
     color: black;
     background-color: white;
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     text-decoration: none;
 }
 
@@ -113,7 +113,7 @@ header {
     background-color: black;
     margin: 0 auto;
     color: white;
-    border-bottom: 2px solid black;
+    border: 2px solid #4366af;
     padding: 0 10px;
 }
 
@@ -146,7 +146,7 @@ header {
 }
 
 .InkPolicy h1 {
-    font-family: 'Roman';
+    font-family: "Courier New", Courier, monospace;
     font-weight: bold;
     font-size: 40px;
     text-align: center;
@@ -161,7 +161,7 @@ header {
     float: right;
     padding: 10px;
     margin-bottom: 40px;
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     font-size: 26px;
 }
 
@@ -183,13 +183,13 @@ header {
 }
 
 .column h1 {
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     font-size: 18px;
     font-weight: bold;
 }
 
 .column p {
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     font-size: 14px;
 }
 
@@ -205,7 +205,7 @@ header {
 footer {
     background-color: black;
     color: white;
-    font-family: 'roman';
+    font-family: "Courier New", Courier, monospace;
     font-size: 16px;
     width: 1170px;
     padding: 10px 40px;
